Fix T103403: Lightgroup passes can contain lighting on shadow catchers